// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Should match snapshot when center prop is set 1`] = `
<button
  className="sc-bdVaJa eNqgxS"
  disabled={false}
  onClick={[Function]}
  type="button"
>
   
  Center
   
</button>
`;

exports[`Button component Should match snapshot when full prop is set 1`] = `
<button
  className="sc-bdVaJa gpwVYr"
  disabled={false}
  onClick={[Function]}
  type="button"
>
   
  Full
   
</button>
`;

exports[`Button component Should match the snapshot 1`] = `
<button
  className="sc-bdVaJa hjGKqd"
  disabled={false}
  onClick={[Function]}
  type="button"
>
   
  Text
   
</button>
`;

exports[`Button component when there is a skin set should match disabled snapshot 1`] = `
<button
  className="sc-bdVaJa HTjCd"
  disabled={true}
  onClick={[Function]}
  type="button"
>
   
  Disabled
   
</button>
`;

exports[`Button component when there is a skin set should match light snapshot 1`] = `
<button
  className="sc-bdVaJa hjGKqd"
  disabled={false}
  onClick={[Function]}
  type="button"
>
   
  Light
   
</button>
`;

exports[`Button component when there is a skin set should match link snapshot 1`] = `
<button
  className="sc-bdVaJa lyuiu"
  disabled={false}
  onClick={[Function]}
  type="button"
>
   
  Link
   
</button>
`;

exports[`Button component when there is a skin set should match secondary snapshot 1`] = `
<button
  className="sc-bdVaJa hjGKqd"
  disabled={false}
  onClick={[Function]}
  type="button"
>
   
  Secondary
   
</button>
`;
